# trap-competetion-2023-summer

./: .gitignore  download.sh  pyproject.toml
trap-competetion-2023-summer/output/: result.txt  submission.csv
trap-competetion-2023-summer/working/: bert.py  debug.py  main.py  main2.py  myutil.py  submission.csv
