[tool.poetry]
name = "kaggle-playground"
version = "0.1.0"
description = ""
authors = ["ras0q <ras0q@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = { version = "^2.0.1+cu118", source = "torch_cu118" }
lightning = "^2.0.7"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
lightgbm = "^4.0.0"
matplotlib = "^3.7.2"
llvmlite = "^0.40.1"
umap-learn = "^0.5.3"
transformers = "^4.32.0"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pyproject-flake8 = "^6.0.0"
kaggle = "^1.5.16"

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]

[tool.isort]
profile = "black"

[tool.mypy]

[tool.flake8]
max-line-length = 88
